# HoudiniEngineFor3dsMax

./: .gitignore  CMakeLists.txt  DllEntry.cpp  HoudiniEngine.cpp  HoudiniEngine.def  HoudiniEngine.h  HoudiniEngine.rc  HoudiniEngine_gui.cpp  HoudiniEngine_gui.h  HoudiniEngine_id.h  HoudiniEngine_input.cpp  HoudiniEngine_input.h  HoudiniEngine_logo.h  HoudiniEngine_mesh.cpp  HoudiniEngine_mesh.h  HoudiniEngine_script.cpp  HoudiniEngine_util.cpp  HoudiniEngine_util.h  LICENSE  README.md  resource.h
Max2013/: CMakeLists.txt
Max2014/: CMakeLists.txt
Max2015/: CMakeLists.txt
Max2016/: CMakeLists.txt
MaxScripts/: HoudiniEngine_CreatePlugin.mcr  HoudiniEngine_Menu.mcr  HoudiniEngine_Settings.mcr  HoudiniEngine_Startup.ms
